Refactor: "Race 클래스 메소드 세분화 및 코드 간결화"
-메소드 세분화
  #setCarName()
    -자동차 이름을 입력받음.

  #setPlayCount()
    -시도 횟수를 입력받음.

  #printEachCarResult()
    -각각 자동차의 시도 결과를 출력함.

-Stream API를 활용한 코드 간결화.